--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,8 @@ obj
 .vs
 .Python
 *.docx
+Programming Basics with C\#/3. CSharp-Advanced-Conditional-Statements/Advanced-Conditional-Statements-Lab/03.2 Advanced-Conditional-Statements-Lab.docx
+Programming Basics with C\#/3. CSharp-Advanced-Conditional-Statements/Advanced-Conditional-Statements-Lab/WeekendVsWorkingDay/ConditionalStatementsAdvLab.sln
+Programming Basics with C\#/3. CSharp-Advanced-Conditional-Statements/Advanced-Conditional-Statements-Lab/WeekendVsWorkingDay/WeekendVsWorkingDay.csproj
+Programming Basics with C\#/3. CSharp-Advanced-Conditional-Statements/Advanced-Conditional-Statements-Еxercise/Advanced-Conditional-Statements-Еxercise.docx
+Programming Basics with C\#/3. CSharp-Advanced-Conditional-Statements/Advanced-Conditional-Statements-Еxercise/OnTimeForTheExam/OnTimeForTheExam.csproj
